<resources>
    <string name="app_name">Sudoku App</string>
    <string name="start">Start</string>
    <string name="options">Options</string>
    <string name="confirm">Confirm</string>
    <string name="input_mode">Manual Input</string>
    <string name="difficulty">Choose a Difficulty:</string>
    <string name="language">Choose a Learning Method:</string>
    <string name="english">English to Spanish Translation</string>
    <string name="spanish">Spanish to English Translation</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="congratulations">Congratulations</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="numbers">Numbers</string>
    <string name="family">Family</string>
    <string name="food_and_drinks">food and drinks</string>
    <string name="direction">direction</string>
    <string name="greetings">greetings</string>
    <string name="solve">Solve</string>
    <string name="use_mouse_or_finger_to_scroll_side_to_side">Use mouse or finger to scroll side to side</string>
    <string name="tutorial_text">The game rules are similar to regular Sudoku. The difference is that instead of numbers, You will be using English and Spanish words. \nIn the default setting, English words will be given and you will choose from 9 given Spanish words so that every row, column, and 3x3 region contains each word exactly once.\nIn other words, if \'One\' is already in row 2, column 8
    <string name="tutorial_2">This is manual input mode, you will select a cell and manually input the answer into the text field, then click OK to confirm. similarly, when you click on a cell, the highlighted cells will tell you what words shouldn\'t be used.</string>
    <string name="tutorial_3">This is audio mode, it can be used in combination with other settings. This mode will change the given words to numbers. You will need to click on the numbers, listen for the word spoken, and choose the correct translation of the word from the pop-up. Using the words you filled in by listening, you will be able to do the puzzle like normal.</string>
    <string name="tutorial">Tutorial</string>
    <string name="_9x9">9x9</string>
...
    <string name="_4x4">4x4 </string>
    <string name="_12x12">12x12</string>
    <string name="_6x6">6x6 </string>
    <string name="categories">Categories</string>
    <string name="select_board_size">Select board size</string>
    <string name="choose_a_grid_size">Choose a grid size</string>
    <string name ="congratulations_you_completed_the_puzzle">Congratulations, you completed the puzzle!</string>
    <string name ="_0_00">0:00</string>
    <string name="here_is_your_time" />
    <string name="custom_words">Custom Words</string>
    <string name="enter_your_answer">\"Enter your answer: \"</string>
    <string name="help">Help</string>
    <string name="your_answer_here">Your answer here</string>
...
    <string name="your_custom_words">Your Custom Words</string>
    <string name="customwordsscrollview">customWordsScrollView</string>
    <string name="audio_mode">Audio mode</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="display_theme">Choose your Display Theme</string>
    <string name="theme_mode">Dark Mode</string>
    <string name="custom">Customize Word Bank</string>

</resources>
