...
    android:layout_height="match_parent"
    tools:context=".view.GameSetting">



    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:cornerRadius="25dp"
        style="@style/Widget.MaterialComponents.TimePicker.Button"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchInputMode"
        android:layout_width="141dp"
        android:layout_height="59dp"
        android:showText="false"
        android:splitTrack="false"
        android:text="@string/input_mode"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <ToggleButton
        android:id="@+id/tgBtn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textOff="@string/_9x9"
        android:textOn="@string/_9x9"
        app:layout_constraintBottom_toBottomOf="parent"
...
